Template html page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="robot" content="index,follow">
+    <meta name="Description" content="Author: Tim Tran, Author: Tim Tran">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bus Program Titleholder</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    
+    <script src="script.js"></script>
+  </body>
+</html>
