--- a/index.html
+++ b/index.html
@@ -8,8 +8,47 @@
     <title>Bus Program Titleholder</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-    
-    <script src="script.js"></script>
-  </body>
+<body>
+  <div class="navbar">
+    <a href="#introduction">Introduction</a>
+    <a href="#reserve-seats">Reserve Seats</a>
+  </div>
+
+  <section id="introduction">
+    <h2>Title Section</h2>
+    <p>Placeholder for the title section content.</p>
+
+    <h2>About Us</h2>
+    <p>Placeholder for the About Us section content.</p>
+
+    <h2>What Routes Do We Cover</h2>
+    <p>Placeholder for the What Routes Do We Cover section content.</p>
+  </section>
+
+  <section id="reserve-seats">
+    <h2>Reserve a Seat</h2>
+    <form>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name"><br><br>
+
+      <label for="num-people">Number of People:</label>
+      <input type="number" id="num-people" name="num-people"><br><br>
+
+      <label for="route-number">Route Number:</label>
+      <input type="text" id="route-number" name="route-number"><br><br>
+
+      <label for="time">Time:</label>
+      <input type="text" id="time" name="time"><br><br>
+
+      <input type="submit" value="Submit">
+    </form>
+  </section>
+
+  <footer>
+    <h2>Contact Us</h2>
+    <p>Email: example@example.com</p>
+    <p>Phone: 123-456-7890</p>
+  </footer>
+  <script src="script.js"></script>
+</body>
 </html>
