--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="Description" content="Author: Tim Tran, Author: Tim Tran">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bus Program Titleholder</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 <body>
   <div class="navbar">
