--- a/index.html
+++ b/index.html
@@ -1,54 +1,49 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="robot" content="index,follow">
-    <meta name="Description" content="Author: Tim Tran, Author: Tim Tran">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bus Program Titleholder</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bus Program</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-  <div class="navbar">
-    <a href="#introduction">Introduction</a>
+  <header>
+    <h1>Welcome to the Bus Program</h1>
+  </header>
+
+  <nav class="navbar">
+    <a href="#home">Home</a>
+    <a href="#schedule">Schedule</a>
     <a href="#reserve-seats">Reserve Seats</a>
-  </div>
+  </nav>
 
-  <section id="introduction">
-    <h2>Title Section</h2>
-    <p>Placeholder for the title section content.</p>
-
-    <h2>About Us</h2>
-    <p>Placeholder for the About Us section content.</p>
-
-    <h2>What Routes Do We Cover</h2>
-    <p>Placeholder for the What Routes Do We Cover section content.</p>
+  <section id="home">
+    <h2>Home</h2>
+    <p>Welcome to the Bus Program. Here you can find information about bus schedules and reserve seats for your journey.</p>
   </section>
 
-  <section id="reserve-seats">
-    <h2>Reserve a Seat</h2>
-    <form>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name"><br><br>
-
-      <label for="num-people">Number of People:</label>
-      <input type="number" id="num-people" name="num-people"><br><br>
-
-      <label for="route-number">Route Number:</label>
-      <input type="text" id="route-number" name="route-number"><br><br>
+  <section id="schedule">
+    <h2>Schedule</h2>
+    <form id="schedule-form">
+      <label for="date">Date:</label>
+      <input type="date" id="date" name="date" required><br><br>
 
       <label for="time">Time:</label>
-      <input type="text" id="time" name="time"><br><br>
+      <input type="time" id="time" name="time" required><br><br>
 
       <input type="submit" value="Submit">
     </form>
   </section>
 
+  <section id="reserve-seats">
+    <h2>Reserve Seats</h2>
+    <p>Placeholder for the reserve seats section content.</p>
+  </section>
+
   <footer>
-    <h2>Contact Us</h2>
-    <p>Email: example@example.com</p>
-    <p>Phone: 123-456-7890</p>
+    <p>&copy; 2023 Bus Program. All rights reserved.</p>
   </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
