--- a/index.html
+++ b/index.html
@@ -37,10 +37,27 @@
 
   <section id="reserve-seats">
     <h2>Reserve Seats</h2>
-    <p>Placeholder for the reserve seats section content.</p>
+    <form>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name"><br><br>
+
+      <label for="num-people">Number of People:</label>
+      <input type="number" id="num-people" name="num-people"><br><br>
+
+      <label for="route-number">Route Number:</label>
+      <input type="text" id="route-number" name="route-number"><br><br>
+
+      <label for="time">Time:</label>
+      <input type="text" id="time" name="time"><br><br>
+      
+      <input type="submit" value="Submit">
+    </form>
   </section>
 
   <footer>
+    <h2>Contact Us</h2>
+    <p>Email: example@example.com</p>
+    <p>Phone: 123-456-7890</p>
     <p>&copy; 2023 Bus Program. All rights reserved.</p>
   </footer>
 
