Fixed up footer and changed up header, also added images roulette (but no images)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
     <h2>Home</h2>
     <p>Welcome to the Bus Program. Here you can find information about bus schedules and reserve seats for your journey.</p>
   </section>
+    <h2>Gallery</h2>
+    <div class="slideshow-container">
+      <div class="mySlides fade">
+        <img src="image1.jpg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+        <img src="image2.jpg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+        <img src="image3.jpg" style="width:100%">
+      </div>
+    </div>
+    <br>
+    <div style="text-align:center">
+      <span class="dot"></span> 
+      <span class="dot"></span> 
+      <span class="dot"></span> 
+    </div>
+  </section>
 
   <section id="schedule">
     <h2>Schedule</h2>
