--- a/index.html
+++ b/index.html
@@ -17,29 +17,33 @@
     <a href="#reserve-seats">Reserve Seats</a>
   </nav>
 
+  <section>
+    <div class="slideshow-container">
+      <div class="mySlides fade">
+        <img src="image.jpeg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+        <img src="image2.jpeg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+        <img src="image3.jpeg" style="width:100%">
+      </div>
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+    <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)"></span> 
+      <span class="dot" onclick="currentSlide(2)"></span> 
+      <span class="dot" onclick="currentSlide(3)"></span> 
+    </div>
+  </section>
+
   <section id="home">
     <h2>Home</h2>
     <p>Welcome to the Bus Program. Here you can find information about bus schedules and reserve seats for your journey.</p>
   </section>
-    <h2>Gallery</h2>
-    <div class="slideshow-container">
-      <div class="mySlides fade">
-        <img src="image1.jpg" style="width:100%">
-      </div>
-      <div class="mySlides fade">
-        <img src="image2.jpg" style="width:100%">
-      </div>
-      <div class="mySlides fade">
-        <img src="image3.jpg" style="width:100%">
-      </div>
-    </div>
-    <br>
-    <div style="text-align:center">
-      <span class="dot"></span> 
-      <span class="dot"></span> 
-      <span class="dot"></span> 
-    </div>
-  </section>
+  
 
   <section id="schedule">
     <h2>Schedule</h2>
