Problem still there, it appears that POST can't be handled

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <label for="date">Date:</label>
       <input type="date" id="date" name="date" required><br><br>
 
-      <label for="time">Time:</label>
-      <input type="time" id="time" name="time" required><br><br>
+      <label for="schedule-time">Time:</label>
+      <input type="time" id="schedule-time" name="time" required><br><br>
 
       <input type="submit" value="Submit">
     </form>
@@ -60,7 +60,7 @@
 
   <section id="reserve-seats">
     <h2>Reserve Seats</h2>
-    <form action="/submit" method="post" id="myForm">
+    <form action="/reserve" method="post" id="myForm">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name"><br><br>
 
@@ -70,8 +70,8 @@
       <label for="route-number">Route Number:</label>
       <input type="text" id="route-number" name="route-number"><br><br>
 
-      <label for="time">Time:</label>
-      <input type="text" id="time" name="time"><br><br>
+      <label for="reserve-time">Time:</label>
+      <input type="text" id="reserve-time" name="time"><br><br>
       
       <input type="submit" value="Submit" />
     </form>
