--- a/public/index.html
+++ b/public/index.html
@@ -54,12 +54,33 @@
     </form>
   </section>
 
-  <form action="/submit" method="POST">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required><br><br>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br><br>
-    <input type="submit" value="Submit">
-  </form>
+  <section id="reserve-seats">
+  <h2>Reserve Seats</h2>
+    <form action="/submit" method="POST" id="myForm">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required><br><br>
+
+      <label for="num-people">Number of People:</label>
+      <input type="number" id="numpeople" name="numpeople"><br><br>
+
+      <label for="route-number">Route Number:</label>
+      <input type="text" id="routenumber" name="routenumber"><br><br>
+
+      <label for="reserve-time">Time:</label>
+      <input type="text" id="reservetime" name="time"><br><br>
+        
+      <input type="submit" value="Submit" />
+    </form>
+  </section>
+
+  <footer>
+    <h2>Contact Us</h2>
+    <p>Email: example@example.com</p>
+    <p>Phone: 123-456-7890</p>
+    <p>&copy; 2025 Bus Program. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
+
 </body>
 </html>
